# cpp-rest-server

./: .gitignore  CMakeLists.txt  ImageShare.sqlite  LICENSE  Makefile  README.md  conanfile.txt  db.sqlite  default.nix  flake.nix  junk.txt  main.cpp
cmake/: Conan.cmake  RunConan.cmake  StaticAnalyzers.cmake
config/: server_config.json
demo/: CMakeLists.txt  constraint.cpp  json.cpp  soci.cpp
dev_example/: CMakeLists.txt
examples/: CMakeLists.txt  json_example.cpp  soci_example.cpp
include/: actions.hpp  api_handlers.hpp  api_routes.hpp  color.hpp  composition.hpp  config.hpp  errors.hpp  handler.hpp  handler_params.hpp  handlers.hpp  models.hpp  route.hpp  routes.hpp  typedefs.hpp  util.hpp  utils.hpp
include/model/: constraint.hpp  data_model.hpp  data_model_base.hpp  field.hpp  model.hpp  model_base.hpp  models.hpp
prog/rest_server/: CMakeLists.txt  actions.hpp  errors.hpp  handler.hpp  main.cpp  models.hpp  router.hpp  routes.hpp  user.hpp  utils.hpp
prog/rest_server/model/: constraint.hpp  field.hpp  model.hpp
server/: CMakeLists.txt  README.md  db.sqlite
server/examples/: CMakeLists.txt  soci_example.cpp
server/src/: actions.hpp  handler.hpp  main.cpp  models.hpp  router.hpp  routes.hpp  user.hpp  utils.hpp
server/src/model/: constraint.hpp  field.hpp  model.hpp
src/: actions.hpp  api_handlers.cpp  config.hpp  errors.hpp  handler.cpp  handler.hpp  main.cpp  route.cpp  routes.cpp  routes.hpp  utils.hpp
src/model/: constraint.hpp  field.hpp  model.hpp
